--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>jQuery Calculator</title>
+    <title>Mock iOS Calculator</title>
 
     <link rel="stylesheet" type="text/css" href="style.css">
     <!-- Added link to the jQuery Library -->
